<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javabobo.projectdemo.ui.Activitys.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Hackathon"
                android:textColor="@android:color/white"
                android:textSize="28dp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <RelativeLayout
                android:id="@+id/containerInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerInParent="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:textColor="@android:color/white"
                        android:id="@+id/username_input"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@android:color/white"
                        android:ems="10"
                        android:hint="@string/name_input"
                        android:inputType="textPersonName"
                        android:maxLines="1"

                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/username"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/username">

                    <EditText
                        android:textColorHint="@android:color/white"
                        android:id="@+id/password_input"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:ems="10"
                        android:hint="@string/password_input"
                        android:maxLines="1"

                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/containerInput">

                <ImageView
                    android:id="@+id/button_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/login_button" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button_login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:id="@+id/text_sign_up_1"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sign_up_1"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/sign_up"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/text_sign_up_1"
                        android:text="@string/text_sign_up_2"
                        android:textColor="@color/colorYellow" />
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
