<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javabobo.projectdemo.ui.Activitys.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"


        android:src="@drawable/background" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Hackathon"
                android:textColor="@android:color/white"
                android:textSize="28dp"
                android:textStyle="bold" />


            <RelativeLayout
                android:id="@+id/containerInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_centerInParent="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/username_input"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:hint="@string/name_input"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white"

                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/username"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/username">

                    <EditText
                        android:id="@+id/email_input"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:hint="@string/email_input"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white"

                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username">

                    <EditText
                        android:id="@+id/password_input"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:hint="@string/password_input"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white"

                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_password"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/password">

                    <EditText
                        android:id="@+id/confirm_password_input"
                        android:layout_width="wrap_content"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:ems="10"
                        android:hint="@string/confirm_password_input"
                        android:maxLines="1"

                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/white"

                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/containerInput">

                <ImageView

                    android:id="@+id/button_register"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/container_add_picture"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/register_button" />

                <RelativeLayout
                    android:id="@+id/container_add_picture"
                    android:layout_width="170dp"

                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="32dp"
                    android:background="@drawable/add_picture"
                    >

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/add_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:textStyle="bold"
                        android:text="@string/add_picture" />

                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
